--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-ejs": "^2.0.0",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "mogoose": "^0.0.1-security",
-    "mongoose": "^7.3.1",
+    "mongoose": "^7.3.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
