--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "express-ejs": "^2.0.0",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
     "mogoose": "^0.0.1-security",
     "mongoose": "^7.3.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
+    "pdf-creator-node": "^2.3.5",
     "session": "^0.1.0"
   }
 }
