--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=443
 DB_URI=mongodb+srv://Sublisivarte:FS6lvnrfFhAXRa97@cluster0.5bncdlw.mongodb.net/?retryWrites=true&w=majority
+SECRET=zymuxtDKz4VcGMpx
+USER=user
