--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mogoose": "^0.0.1-security",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
