--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-datetime": "^2.1.2",
+    "node-localstorage": "^3.0.5",
     "nodemailer": "^6.9.5",
     "nodemon": "^2.0.22",
     "pdf-creator-node": "^2.3.5",
