--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sublisivarte",
   "version": "1.0.0",
-  "description": "",
+  "description": "Estandares de JavaScript\r - sangria de 4 espacios\r - constantes en mayusculas y separadas con '_'\r - evitar uso de ';'\r - variables, funciones y atributos de objetos en camelCase\r - declarar variables locales con let\r - dejar un espacio entre la ',' y el valor en un arreglo\r - dejar un espacio entre la condicion y el if \r - utilizar funciones de flecha para las API\r - espacio entre argumentos de funciones de flecha",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -32,7 +32,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mogoose": "^0.0.1-security",
-    "mongoose": "^7.5.0",
+    "mongoose": "^7.5.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-datetime": "^2.1.2",
@@ -41,5 +41,6 @@
     "nodemon": "^2.0.22",
     "pdf-creator-node": "^2.3.5",
     "session": "^0.1.0"
-  }
+  },
+  "devDependencies": {}
 }
